update vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -28,5 +28,15 @@
         "VIEW_COMPILED_PATH": "/tmp",
         "SESSION_DRIVER": "cookie",
         "LOG_CHANNEL": "stderr"
-    }
+    },
+    "builds": [
+        {
+            "src": "api/index.php",
+            "use": "vercel-php@0.6.0"
+        },
+        {
+            "src": "public/**/*",
+            "use": "@vercel/static"
+        }
+    ]
 }
