--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,20 @@
 {
     "version": 2,
-    "outputDirectory": "public",
-    "functions": {
-        "api/index.php": {
-            "runtime": "vercel-php@0.7.4"
+    "builds": [
+        {
+            "src": "api/index.php",
+            "use": "vercel-php@0.7.4"
+        },
+        {
+            "src": "public/**",
+            "use": "@vercel/static"
         }
-    },
+    ],
     "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/public/$1"
+        },
         {
             "handle": "filesystem"
         },
