--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,11 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "api/index.php",
-            "use": "vercel-php@0.7.4"
-        },
-        {
-            "src": "public/**",
-            "use": "@vercel/static"
+    "functions": {
+        "api/index.php": {
+            "runtime": "vercel-php@0.7.4"
         }
-    ],
+    },
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/public/$1"
-        },
-        {
-            "handle": "filesystem"
-        },
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
